Segui con el responsive y cambie los botones

--- a/category.html
+++ b/category.html
@@ -23,7 +23,7 @@
 
                 <ul class="ul_header">
                     <li> <a href="./index.html"> <img id="logo" src="./img/logo.png" alt="Logo"></a></li>
-                    <li> <a class="a_header" href="">Buscar</a></li>
+                    <li class="buscar"> <input placeholder="🔍Buscar..." type="search" name="buscar" id="buscar"> </li>
                 </ul> 
 
             </section>
@@ -87,7 +87,7 @@
                 <img  src="./img/galletitas.jpg" alt="galletitas">
                 <p class="descrip_prod">Galletitas dulces clásicas, ideales para la merienda.</p>
                 <p class="precio">$1.500</p>
-                <a class="verDetalle" href="./product.html">Ver detalle</a>
+                <button class="verDetalle" href="./product.html">Ver detalle</button>
             </article>
 
             <article class="article_productos">
@@ -95,7 +95,7 @@
                 <img src="./img/leche.jpg" alt="leche">
                 <p class="descrip_prod">Leche fresca y natural, ideal para tomar o cocinar.</p>
                 <p class="precio">$350</p>
-                <a class="verDetalle" href="./product.html">Ver detalle</a>
+                <button class="verDetalle" href="./product.html">Ver detalle</button>
             </article>
 
             <article class="article_productos">
@@ -103,7 +103,7 @@
                 <img src="./img/pan.jpg" alt="pan">
                 <p class="descrip_prod">Pan suave y esponjoso, perfecto para sandwiches o tostadas.</p>
                 <p class="precio">$500</p>
-                <a class="verDetalle" href="./product.html">Ver detalle</a>
+                <button class="verDetalle" href="./product.html">Ver detalle</button>
             </article>
 
             <article class="article_productos">
@@ -111,7 +111,7 @@
                 <img src="./img/arroz.jpg" alt="arroz">
                 <p class="descrip_prod">Arroz de calidad premium, ideal para cualquier receta.</p>
                 <p class="precio">$420</p>
-                <a class="verDetalle" href="./product.html">Ver detalle</a>
+                <button class="verDetalle" href="./product.html">Ver detalle</button>
             </article>
 
             <article class="article_productos">
@@ -119,7 +119,7 @@
                 <img src="./img/aceite.jpg" alt="aceite">
                 <p class="descrip_prod">Aceite vegetal para freír, cocinar y aderezar tus comidas.</p>
                 <p class="precio">$1.800</p>
-                <a class="verDetalle" href="./product.html">Ver detalle</a>
+                <button class="verDetalle" href="./product.html">Ver detalle</button>
             </article>
 
             <article class="article_productos">
@@ -127,7 +127,7 @@
                 <img src="./img/fideos.jpg" alt="fideos">
                 <p class="descrip_prod">Fideos de trigo de alta calidad, ideales para cualquier tipo de pasta.</p>
                 <p class="precio">$300</p>
-                <a class="verDetalle" href="./product.html">Ver detalle</a>
+                <button class="verDetalle" href="./product.html">Ver detalle</button>
             </article>
 
             <article class="article_productos">
@@ -135,7 +135,7 @@
                 <img src="./img/azucar.jpg" alt="silla">
                 <p class="descrip_prod">Azúcar blanca refinada, perfecta para postres y bebidas.</p>
                 <p class="precio">$900</p>
-                <a class="verDetalle" href="./product.html">Ver detalle</a>
+                <button class="verDetalle" href="./product.html">Ver detalle</button>
             </article>
 
 
