--- a/register.html
+++ b/register.html
@@ -23,7 +23,7 @@
 
                 <ul class="ul_header">
                     <li> <a href="./index.html"> <img id="logo" src="./img/logo.png" alt="Logo"></a></li>
-                    <li> <a class="a_header" href="">Buscar</a></li>
+                    <li class="buscar"> <input placeholder="🔍Buscar..." type="search" name="buscar" id="buscar"> </li>
                 </ul> 
 
             </section>
