--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <img src="./img/camisa.jpeg" alt="camisa">
                     <p class="descrip_prod">Camisa de algodón clásica, manga larga.</p>
                     <p class="precio">$22.000</p>
-                    <button class="verDetalle" href="./product.html">Ver detalle</button>
+                    <a class="verDetalle" href="./product.html">Ver detalle</a>
                 </article>
 
                 <article class="article_productos">
@@ -98,7 +98,7 @@
                     <img src="./img/crema.jpg" alt="crema">
                     <p class="descrip_prod">Crema ligera que nutre y suaviza la piel.</p>
                     <p class="precio">$8.500</p>
-                    <button class="verDetalle" href="./product.html">Ver detalle</button>
+                    <a class="verDetalle" href="./product.html">Ver detalle</a>
                 </article>
 
                 <article class="article_productos">
@@ -106,7 +106,7 @@
                     <img src="./img/cuchillos.jpg" alt="cuchillos">
                     <p class="descrip_prod">Set de cuchillos de acero inoxidable.</p>
                     <p class="precio">$18.000</p>
-                    <button class="verDetalle" href="./product.html">Ver detalle</button>
+                    <a class="verDetalle" href="./product.html">Ver detalle</a>
                 </article class="article_productos">
 
                 <article class="article_productos">
@@ -114,7 +114,7 @@
                     <img src="./img/galletitas.jpg" alt="galletitas">
                     <p class="descrip_prod">Galletitas dulces clásicas, ideales para la merienda.</p>
                     <p class="precio">$1.500</p>
-                    <button class="verDetalle" href="./product.html">Ver detalle</button>
+                    <a class="verDetalle" href="./product.html">Ver detalle</a>
                 </article class="article_productos">
 
                 <article class="article_productos">
@@ -122,7 +122,7 @@
                     <img src="./img/mochila.jpg" alt="mochila">
                     <p class="descrip_prod">Mochila negra de tela con varios bolsillos.</p>
                     <p class="precio">$34.500</p>
-                    <button class="verDetalle" href="./product.html">Ver detalle</button>
+                    <a class="verDetalle" href="./product.html">Ver detalle</a>
                 </article>
 
                 <article class="article_productos">
@@ -130,7 +130,7 @@
                     <img src="./img/perfume.jpg" alt="perfume">
                     <p class="descrip_prod">Fragancia floral con notas frescas y elegantes.</p>
                     <p class="precio">$25.000</p>
-                    <button class="verDetalle" href="./product.html">Ver detalle</button>
+                    <a class="verDetalle" href="./product.html">Ver detalle</a>
                 </article>
 
                 <article class="article_productos">
@@ -138,7 +138,7 @@
                     <img src="./img/silla_gamer.jfif" alt="silla">
                     <p class="descrip_prod">Silla ergonómica con apoyabrazos y respaldo reclinable.</p>
                     <p class="precio">$95.000</p>
-                    <button class="verDetalle" href="./product.html">Ver detalle</button>
+                    <a class="verDetalle" href="./product.html">Ver detalle</a>
                 </article>
 
                 <article class="article_productos">
@@ -146,7 +146,7 @@
                     <img src="./img/tablet.jpg" alt="tablet">
                     <p class="descrip_prod">Pantalla 10”, ideal para estudio y entretenimiento.</p>
                     <p class="precio">$180.000</p>
-                    <button class="verDetalle" href="./product.html">Ver detalle</button>
+                    <a class="verDetalle" href="./product.html">Ver detalle</a>
                 </article>
 
                 <article class="article_productos">
@@ -154,7 +154,7 @@
                     <img src="./img/vestido.jpg" alt="vestido">
                     <p class="descrip_prod">Vestido corto rojo, estilo casual.</p>
                     <p class="precio">$26.000</p>
-                    <button class="verDetalle" href="./product.html">Ver detalle</button>
+                    <a class="verDetalle" href="./product.html">Ver detalle</a>
                 </article>
 
                 <article class="article_productos">
@@ -162,7 +162,7 @@
                     <img src="./img/zapatillas.jpg" alt="zapatillas">
                     <p class="descrip_prod">Zapatillas deportivas negras con suela antideslizante.</p>
                     <p class="precio">$65.000</p>
-                    <button class="verDetalle" href="./product.html">Ver detalle</button>
+                    <a class="verDetalle" href="./product.html">Ver detalle</a>
                 </article>
             </section>
 
@@ -177,7 +177,7 @@
                     <img src="./img/auriculares.jpg" alt="auriculares">
                     <p class="descrip_prod">Auriculares bluetooth con micrófono integrado y sonido envolvente.</p>
                     <p class="precio">$42.000</p>
-                    <button class="verDetalle" href="./product.html">Ver detalle</button>
+                    <a class="verDetalle" href="./product.html">Ver detalle</a>
                 </article>
 
                 <article class="article_productos">
@@ -185,7 +185,7 @@
                     <img src="./img/matestanley.png" alt="mate">
                     <p class="descrip_prod">Mate térmico de acero inoxidable, resistente y duradero.</p>
                     <p class="precio">$15.000</p>
-                    <button class="verDetalle" href="./product.html">Ver detalle</button>
+                    <a class="verDetalle" href="./product.html">Ver detalle</a>
                 </article>
 
                 <article class="article_productos">
@@ -193,7 +193,7 @@
                     <img src="./img/notebookhp.png" alt="notebook">
                     <p class="descrip_prod">Notebook HP con procesador i5 y 8GB de RAM.</p>
                     <p class="precio">$520.000</p>
-                    <button class="verDetalle" href="./product.html">Ver detalle</button>
+                    <a class="verDetalle" href="./product.html">Ver detalle</a>
                 </article>
 
                 <article class="article_productos">
@@ -201,7 +201,7 @@
                     <img src="./img/heladeranofrost.png" alt="heladera">
                     <p class="descrip_prod">Heladera de 300 litros con sistema No Frost y bajo consumo.</p>
                     <p class="precio">$680.000</p>
-                    <button class="verDetalle" href="./product.html">Ver detalle</button>
+                    <a class="verDetalle" href="./product.html">Ver detalle</a>
                 </article>
 
                 <article class="article_productos">
@@ -209,7 +209,7 @@
                     <img src="./img/lampara.png" alt="lampara">
                     <p class="descrip_prod">Lámpara de pie con base de madera y pantalla de lino.</p>
                     <p class="precio">$28.000</p>
-                    <button class="verDetalle" href="./product.html">Ver detalle</button>
+                    <a class="verDetalle" href="./product.html">Ver detalle</a>
                 </article>
 
                 <article class="article_productos">
@@ -217,7 +217,7 @@
                     <img src="./img/smartwatch.png" alt="smartwatch">
                     <p class="descrip_prod">Reloj inteligente con monitor de ritmo cardíaco y GPS.</p>
                     <p class="precio">$75.000</p>
-                    <button class="verDetalle" href="./product.html">Ver detalle</button>
+                    <a class="verDetalle" href="./product.html">Ver detalle</a>
                 </article>
 
                 <article class="article_productos">
@@ -225,7 +225,7 @@
                     <img src="./img/plancha.png" alt="plancha">
                     <p class="descrip_prod">Plancha alisadora de cerámica con control de temperatura.</p>
                     <p class="precio">$32.000</p>
-                    <button class="verDetalle" href="./product.html">Ver detalle</button>
+                    <a class="verDetalle" href="./product.html">Ver detalle</a>
                 </article>
 
                 <article class="article_productos">
@@ -233,7 +233,7 @@
                     <img src="./img/lumilagro.png" alt="botella">
                     <p class="descrip_prod">Botella térmica de acero inoxidable de 1 litro.</p>
                     <p class="precio">$12.000</p>
-                    <button class="verDetalle" href="./product.html">Ver detalle</button>
+                    <a class="verDetalle" href="./product.html">Ver detalle</a>
                 </article>
 
                 <article class="article_productos">
@@ -241,7 +241,7 @@
                     <img src="./img/pava.png" alt="pava electrica">
                     <p class="descrip_prod">Pava eléctrica de 1.7 litros con corte automático.</p>
                     <p class="precio">$24.000</p>
-                    <button class="verDetalle" href="./product.html">Ver detalle</button>
+                    <a class="verDetalle" href="./product.html">Ver detalle</a>
                 </article>
 
                 <article class="article_productos">
@@ -249,7 +249,7 @@
                     <img src="./img/sabanas.png" alt="sabanas">
                     <p class="descrip_prod">Juego de sábanas de 2 plazas, 100% algodón, estampadas.</p>
                     <p class="precio">$38.000</p>
-                    <button class="verDetalle" href="./product.html">Ver detalle</button>
+                    <a class="verDetalle" href="./product.html">Ver detalle</a>
                 </article>
 
             </section>
