Hice cambios y agregue cosas en login y register

--- a/register.html
+++ b/register.html
@@ -75,7 +75,7 @@
 
         <section class="seccionlogin">
         
-            <form action="results.html" method="GET">
+            <form action="./index.html" method="get">
 
                 <article class="fondologin">
                     <h2 class="bienvenido">REGISTRATE</h2>
@@ -85,7 +85,7 @@
                     </div>
 
                     <div>
-                        <input class="input" id="email" type="email" name="mail" value="">
+                        <input class="input" id="email" type="email" name="mail" value="" required>
                     </div>
 
                     <div>
