Modifique css y los html, casi termine con responsive

--- a/category.html
+++ b/category.html
@@ -23,8 +23,9 @@
 
                 <ul class="ul_header">
                     <li> <a href="./index.html"> <img id="logo" src="./img/logo.png" alt="Logo"></a></li>
-                    <li class="buscar"> <input placeholder="🔍Buscar..." type="search" name="buscar" id="buscar"> </li>
-                </ul> 
+                    <li class="buscar"> <input placeholder="Buscar..." type="search" name="buscar" id="buscar"> </li>
+                    <li><a href="./search.html">🔎</a></li>
+                </ul>
 
             </section>
 
@@ -75,68 +76,75 @@
             </section>
         </aside>
 
+        
+
         <section class="seccion_cuerpo">
 
             <article class="titulo">
                 <h2>Groceries</h2>
             </article>
+
+            <section class="seccion_gral_productos">
+
+                <article class="article_productos">
+                    <h4>Galletitas Today</h4>
+                    <img  src="./img/galletitas.jpg" alt="galletitas">
+                    <p class="descrip_prod">Galletitas dulces clásicas, ideales para la merienda.</p>
+                    <p class="precio">$1.500</p>
+                    <a class="verDetalle" href="./product.html">Ver detalle</a>
+                </article>
+
+                <article class="article_productos">
+                    <h4>Leche Entera La Serenísima 1L</h4>
+                    <img src="./img/leche.jpg" alt="leche">
+                    <p class="descrip_prod">Leche fresca y natural, ideal para tomar o cocinar.</p>
+                    <p class="precio">$350</p>
+                    <a class="verDetalle" href="./product.html">Ver detalle</a>
+                </article>
+
+                <article class="article_productos">
+                    <h4>Pan de Molde Bimbo</h4>
+                    <img src="./img/pan.jpg" alt="pan">
+                    <p class="descrip_prod">Pan suave y esponjoso, perfecto para sandwiches o tostadas.</p>
+                    <p class="precio">$500</p>
+                    <a class="verDetalle" href="./product.html">Ver detalle</a>
+                </article>
+
+                <article class="article_productos">
+                    <h4>Arroz Gallo Oro 1kg</h4>
+                    <img src="./img/arroz.jpg" alt="arroz">
+                    <p class="descrip_prod">Arroz de calidad premium, ideal para cualquier receta.</p>
+                    <p class="precio">$420</p>
+                    <a class="verDetalle" href="./product.html">Ver detalle</a>
+                </article>
+
+                <article class="article_productos">
+                    <h4>Aceite Cocinero 900ml</h4>
+                    <img src="./img/aceite.jpg" alt="aceite">
+                    <p class="descrip_prod">Aceite vegetal para freír, cocinar y aderezar tus comidas.</p>
+                    <p class="precio">$1.800</p>
+                    <a class="verDetalle" href="./product.html">Ver detalle</a>
+                </article>
+
+                <article class="article_productos">
+                    <h4>Fideos Knorr 500g</h4>
+                    <img src="./img/fideos.jpg" alt="fideos">
+                    <p class="descrip_prod">Fideos de trigo de alta calidad, ideales para cualquier tipo de pasta.</p>
+                    <p class="precio">$300</p>
+                    <a class="verDetalle" href="./product.html">Ver detalle</a>
+                </article>
+
+                <article class="article_productos">
+                    <h4>Azúcar Ledesma 1kg</h4>
+                    <img src="./img/azucar.jpg" alt="silla">
+                    <p class="descrip_prod">Azúcar blanca refinada, perfecta para postres y bebidas.</p>
+                    <p class="precio">$900</p>
+                    <a class="verDetalle" href="./product.html">Ver detalle</a>
+                </article>
+
+            </section>
+
             
-
-            <article class="article_productos">
-                <h4>Galletitas Today</h4>
-                <img  src="./img/galletitas.jpg" alt="galletitas">
-                <p class="descrip_prod">Galletitas dulces clásicas, ideales para la merienda.</p>
-                <p class="precio">$1.500</p>
-                <a class="verDetalle" href="./product.html">Ver detalle</a>
-            </article>
-
-            <article class="article_productos">
-                <h4>Leche Entera La Serenísima 1L</h4>
-                <img src="./img/leche.jpg" alt="leche">
-                <p class="descrip_prod">Leche fresca y natural, ideal para tomar o cocinar.</p>
-                <p class="precio">$350</p>
-                <a class="verDetalle" href="./product.html">Ver detalle</a>
-            </article>
-
-            <article class="article_productos">
-                <h4>Pan de Molde Bimbo</h4>
-                <img src="./img/pan.jpg" alt="pan">
-                <p class="descrip_prod">Pan suave y esponjoso, perfecto para sandwiches o tostadas.</p>
-                <p class="precio">$500</p>
-                <a class="verDetalle" href="./product.html">Ver detalle</a>
-            </article>
-
-            <article class="article_productos">
-                <h4>Arroz Gallo Oro 1kg</h4>
-                <img src="./img/arroz.jpg" alt="arroz">
-                <p class="descrip_prod">Arroz de calidad premium, ideal para cualquier receta.</p>
-                <p class="precio">$420</p>
-                <a class="verDetalle" href="./product.html">Ver detalle</a>
-            </article>
-
-            <article class="article_productos">
-                <h4>Aceite Cocinero 900ml</h4>
-                <img src="./img/aceite.jpg" alt="aceite">
-                <p class="descrip_prod">Aceite vegetal para freír, cocinar y aderezar tus comidas.</p>
-                <p class="precio">$1.800</p>
-                <a class="verDetalle" href="./product.html">Ver detalle</a>
-            </article>
-
-            <article class="article_productos">
-                <h4>Fideos Knorr 500g</h4>
-                <img src="./img/fideos.jpg" alt="fideos">
-                <p class="descrip_prod">Fideos de trigo de alta calidad, ideales para cualquier tipo de pasta.</p>
-                <p class="precio">$300</p>
-                <a class="verDetalle" href="./product.html">Ver detalle</a>
-            </article>
-
-            <article class="article_productos">
-                <h4>Azúcar Ledesma 1kg</h4>
-                <img src="./img/azucar.jpg" alt="silla">
-                <p class="descrip_prod">Azúcar blanca refinada, perfecta para postres y bebidas.</p>
-                <p class="precio">$900</p>
-                <a class="verDetalle" href="./product.html">Ver detalle</a>
-            </article>
 
 
         </section>
