--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 
                 <ul class="ul_header">
                     <li> <a href="./index.html"> <img id="logo" src="./img/logo.png" alt="Logo"></a></li>
-                    <li class="buscar"> <input placeholder="🔍Buscar..." type="search" name="buscar" id="buscar"> </li>
+                    <li class="buscar"> <input placeholder="Buscar..." type="search" name="buscar" id="buscar"> </li>
+                    <li><a href="./search.html">🔎</a></li>
                 </ul>
 
             </section>
@@ -80,10 +81,12 @@
 
         <section class="seccion_cuerpo">
 
+            <article class="titulo">
+                <h2>Productos</h2>
+            </article>
+            
             <section class="seccion_gral_productos">
-                <article class="titulo">
-                    <h2>Productos</h2>
-                </article>
+                
 
                 <article class="article_productos">
                     <h4>Camisa Blanca</h4>
@@ -166,11 +169,11 @@
                 </article>
             </section>
 
-            <section class="seccion_gral_productos">
+            <article class="titulo">
+                <h2>Productos Destacados</h2>
+            </article>
 
-                <article class="titulo">
-                    <h2>Productos Destacados</h2>
-                </article>
+            <section class="seccion_gral_productos">
 
                 <article class="article_productos">
                     <h4>Auriculares Inalámbricos JBL</h4>
