--- a/product.html
+++ b/product.html
@@ -23,8 +23,9 @@
 
                 <ul class="ul_header">
                     <li> <a href="./index.html"> <img id="logo" src="./img/logo.png" alt="Logo"></a></li>
-                    <li class="buscar"> <input placeholder="🔍Buscar..." type="search" name="buscar" id="buscar"> </li>
-                </ul> 
+                    <li class="buscar"> <input placeholder="Buscar..." type="search" name="buscar" id="buscar"> </li>
+                    <li><a href="./search.html">🔎</a></li>
+                </ul>
 
             </section>
 
@@ -75,10 +76,12 @@
         </aside>
 
         <section class="seccion_cuerpo">
+
+            <article class="titulo">
+                <h2>Galletitas Toddy</h2>
+            </article>
+
             <section class="seccion_detalle">
-                <article class="titulo">
-                    <h2>Galletitas Toddy</h2>
-                </article>
 
                 <article class="titulo img_product">
                     <img class="img_detalle" src="./img/galletitas.jpg" alt="galletitas">
@@ -115,11 +118,11 @@
                 </article>
             </section>
 
-            <section class="seccion_comentarios">
+            <article class="titulo">
+                <h3>Comentarios</h3>
+            </article>
 
-                <article class="titulo">
-                    <h3>Comentarios</h3>
-                </article>
+            <section class="seccion_comentarios">
                 
                 <article class="art_comentarios">
                     <p>⭐⭐⭐⭐⭐</p>
