--- a/register.html
+++ b/register.html
@@ -23,8 +23,9 @@
 
                 <ul class="ul_header">
                     <li> <a href="./index.html"> <img id="logo" src="./img/logo.png" alt="Logo"></a></li>
-                    <li class="buscar"> <input placeholder="🔍Buscar..." type="search" name="buscar" id="buscar"> </li>
-                </ul> 
+                    <li class="buscar"> <input placeholder="Buscar..." type="search" name="buscar" id="buscar"> </li>
+                    <li><a href="./search.html">🔎</a></li>
+                </ul>
 
             </section>
 
@@ -36,8 +37,9 @@
                 </ul>
 
             </section>
-            
+
         </nav>
+
     </header>
 
     <main>
