--- a/login.html
+++ b/login.html
@@ -16,13 +16,16 @@
 
 <body>
     <header>
+
         <nav>
+
             <section class="secciones_header">
 
                 <ul class="ul_header">
                     <li> <a href="./index.html"> <img id="logo" src="./img/logo.png" alt="Logo"></a></li>
-                    <li class="buscar"> <input placeholder="🔍Buscar..." type="search" name="buscar" id="buscar"> </li>
-                </ul> 
+                    <li class="buscar"> <input placeholder="Buscar..." type="search" name="buscar" id="buscar"> </li>
+                    <li><a href="./search.html">🔎</a></li>
+                </ul>
 
             </section>
 
@@ -34,7 +37,9 @@
                 </ul>
 
             </section>
+
         </nav>
+
     </header>
 
     <main class="mainlogin">
