--- a/search.html
+++ b/search.html
@@ -21,8 +21,9 @@
 
                 <ul class="ul_header">
                     <li> <a href="./index.html"> <img id="logo" src="./img/logo.png" alt="Logo"></a></li>
-                    <li class="buscar"> <input placeholder="🔍Buscar..." type="search" name="buscar" id="buscar"> </li>
-                </ul> 
+                    <li class="buscar"> <input placeholder="Buscar..." type="search" name="buscar" id="buscar"> </li>
+                    <li><a href="./search.html">🔎</a></li>
+                </ul>
 
             </section>
 
