Hice pequeños cambios

--- a/index.html
+++ b/index.html
@@ -25,9 +25,12 @@
 
                 <ul class="ul_header">
                     <li> <a href="./index.html"> <img id="logo" src="./img/logo.png" alt="Logo"></a></li>
-                    <li class="buscar"> <input placeholder="Buscar..." type="search" name="buscar" id="buscar"> </li>
-                    <li><a href="./search.html">🔎</a></li>
                 </ul>
+
+                <form class="ul_header" action="./search.html" method="get">
+                    <input class="buscar" placeholder="Buscar..." type="search" name="buscar" id="buscar">
+                    <button type="submit">Buscar</button>
+                </form>
 
             </section>
 
@@ -49,8 +52,8 @@
 
         <aside>
             <section>
-                <h3 id="categorias">Categorias</h3>
-                <ul class="ulAside">
+                <h3  id="categorias">Categorias</h3>
+                <ul>
                     <li class="li_aside"><a class="a_aside" href="./category.html">Beauty</a></li>
                     <li class="li_aside"><a class="a_aside" href="./category.html">Fragrances</a></li>
                     <li class="li_aside"><a class="a_aside" href="./category.html">Furniture</a></li>
@@ -78,6 +81,7 @@
                 </ul>
             </section>
         </aside>
+
 
         <section class="seccion_cuerpo">
 
