--- a/register.html
+++ b/register.html
@@ -23,9 +23,12 @@
 
                 <ul class="ul_header">
                     <li> <a href="./index.html"> <img id="logo" src="./img/logo.png" alt="Logo"></a></li>
-                    <li class="buscar"> <input placeholder="Buscar..." type="search" name="buscar" id="buscar"> </li>
-                    <li><a href="./search.html">🔎</a></li>
                 </ul>
+
+                <form class="ul_header" action="./search.html" method="get">
+                    <input class="buscar" placeholder="Buscar..." type="search" name="buscar" id="buscar">
+                    <button type="submit">Buscar</button>
+                </form>
 
             </section>
 
