--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         <nav>
 
-            <section class="secciones_header">
+            <section class="secciones_header_izquierda">
 
                 <ul class="ul_header">
                     <li> <a href="./index.html"> <img id="logo" src="./img/logo.png" alt="Logo"></a></li>
@@ -34,7 +34,7 @@
 
             </section>
 
-            <section class="secciones_header ir_form">
+            <section class="secciones_header_derecha ir_form">
 
                 <ul class="ul_header ul_ir_form">
                     <li><a class="a_header" href="./login.html"> Login</a></li>
