--- a/register.html
+++ b/register.html
@@ -17,9 +17,9 @@
 <body>
     <header>
 
-        <nav>
+       <nav>
 
-            <section class="secciones_header">
+            <section class="secciones_header_izquierda">
 
                 <ul class="ul_header">
                     <li> <a href="./index.html"> <img id="logo" src="./img/logo.png" alt="Logo"></a></li>
@@ -32,7 +32,7 @@
 
             </section>
 
-            <section class="secciones_header ir_form">
+            <section class="secciones_header_derecha ir_form">
 
                 <ul class="ul_header ul_ir_form">
                     <li><a class="a_header" href="./login.html"> Login</a></li>
@@ -80,7 +80,7 @@
 
         <section class="seccionlogin">
         
-            <form action="./index.html" method="get">
+            <form action="./login.html" method="get">
 
                 <article class="fondologin">
                     <h2 class="bienvenido">REGISTRATE</h2>
