--- a/search.html
+++ b/search.html
@@ -21,7 +21,7 @@
 
         <nav>
 
-            <section class="secciones_header">
+            <section class="secciones_header_izquierda">
 
                 <ul class="ul_header">
                     <li> <a href="./index.html"> <img id="logo" src="./img/logo.png" alt="Logo"></a></li>
@@ -30,12 +30,11 @@
                 <form class="ul_header" action="./search.html" method="get">
                     <input class="buscar" placeholder="Buscar..." type="search" name="buscar" id="buscar">
                     <button type="submit">Buscar</button>
-                            
-                </form>
+                </form>
 
             </section>
 
-            <section class="secciones_header ir_form">
+            <section class="secciones_header_derecha ir_form">
 
                 <ul class="ul_header ul_ir_form">
                     <li><a class="a_header" href="./login.html"> Login</a></li>
