Hice la validacion del buscador y lo enganche a todos los html

--- a/product.html
+++ b/product.html
@@ -25,7 +25,7 @@
                     <li> <a href="./index.html"> <img id="logo" src="./img/logo.png" alt="Logo"></a></li>
                 </ul>
 
-                <form class="ul_header" action="./search.html" method="get">
+                <form class="ul_header formularionav" action="./search.html" method="get">
                     <input class="buscar" placeholder="Buscar..." type="search" name="buscar" id="buscar">
                     <button type="submit">Buscar</button>
                 </form>
@@ -188,6 +188,7 @@
     </footer>
 
     <script src="./js/product.js"></script>
+    <script src="./js/vallidar_buscador.js"></script>
 </body>
 
 </html>
