Edite el aside para que la lista de categorias coincida con el material

--- a/category.html
+++ b/category.html
@@ -50,31 +50,8 @@
         <aside>
             <section>
                 <h3  id="categorias">Categorias</h3>
-                <ul>
-                    <li class="li_aside"><a class="a_aside" href="./category.html">Beauty</a></li>
-                    <li class="li_aside"><a class="a_aside" href="./category.html">Fragrances</a></li>
-                    <li class="li_aside"><a class="a_aside" href="./category.html">Furniture</a></li>
-                    <li class="li_aside"><a class="a_aside" href="./category.html">Groceries</a></li>
-                    <li class="li_aside"><a class="a_aside" href="./category.html">Home decoration</a></li>
-                    <li class="li_aside"><a class="a_aside" href="./category.html">Kitchen accessories</a></li>
-                    <li class="li_aside"><a class="a_aside" href="./category.html">Laptops</a></li>
-                    <li class="li_aside"><a class="a_aside" href="./category.html">Mens shirts</a></li>
-                    <li class="li_aside"><a class="a_aside" href="./category.html">Mens shoes</a></li>
-                    <li class="li_aside"><a class="a_aside" href="./category.html">Mens watches</a></li>
-                    <li class="li_aside"><a class="a_aside" href="./category.html">Mobile accessories</a></li>
-                    <li class="li_aside"><a class="a_aside" href="./category.html">Motorcycle</a></li>
-                    <li class="li_aside"><a class="a_aside" href="./category.html">Skin care</a></li>
-                    <li class="li_aside"><a class="a_aside" href="./category.html">Smartphones</a></li>
-                    <li class="li_aside"><a class="a_aside" href="./category.html">Sports accessories</a></li>
-                    <li class="li_aside"><a class="a_aside" href="./category.html">Sunglasses</a></li>
-                    <li class="li_aside"><a class="a_aside" href="./category.html">Tablets</a></li>
-                    <li class="li_aside"><a class="a_aside" href="./category.html">Tops</a></li>
-                    <li class="li_aside"><a class="a_aside" href="./category.html">Vehicle</a></li>
-                    <li class="li_aside"><a class="a_aside" href="./category.html">Womens bags</a></li>
-                    <li class="li_aside"><a class="a_aside" href="./category.html">Womens dresses</a></li>
-                    <li class="li_aside"><a class="a_aside" href="./category.html">Womens jewellery</a></li>
-                    <li class="li_aside"><a class="a_aside" href="./category.html">Womens shoes</a></li>
-                    <li class="li_aside"><a class="a_aside" href="./category.html">Womens watches</a></li>
+                <ul class="ul_categorias">
+                    
                 </ul>
             </section>
         </aside>
@@ -168,6 +145,7 @@
 
     <script src="./js/category.js"></script>
     <script src="./js/vallidar_buscador.js"></script>
+    <script src="./js/categorias.js"></script>
 </body>
 
 </html>
