--- a/search-results.html
+++ b/search-results.html
@@ -16,5 +16,6 @@
 
     <script src="./js/search-results.js"></script>
     <script src="./js/vallidar_buscador.js"></script>
+    <script src="./js/categorias.js"></script>
 </body>
 </html>
