--- a/search-results.html
+++ b/search-results.html
@@ -1,21 +1,135 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Search Results</title>
+
+    <link rel="stylesheet" href="./css/styles.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+
 </head>
+
 <body>
-    
+    <header>
+
+        <nav>
+
+            <section class="secciones_header_izquierda">
+
+                <ul class="ul_header">
+                    <li> <a href="./index.html"> <img id="logo" src="./img/logo.png" alt="Logo"></a></li>
+                </ul>
+
+                <form class="ul_header formularionav" action="./search.html" method="get">
+                    <input class="buscar" placeholder="Buscar..." type="search" name="buscar" id="buscar">
+                    <button type="submit">Buscar</button>
+                </form>
+
+            </section>
+
+            <section class="secciones_header_derecha ir_form">
+
+                <ul class="ul_header ul_ir_form">
+                    <li><a class="a_header" href="./login.html"> Login</a></li>
+                    <li><a class="a_header" href="./register.html"> Registrate</a></li>
+                </ul>
+
+            </section>
+
+        </nav>
+
+    </header>
+
+    <main>
 
 
+        <aside>
+            <section>
+                <h3 id="categorias">Categorias</h3>
+                <ul class="ul_categorias">
+                    
+                </ul>
+            </section>
+        </aside>
+
+        <section class="seccion_cuerpo">
+
+            <article class="titulo">
+                <h2>Resultados para tu búsqueda de estilo y cuidado personal</h2>
+            </article>
+
+            <section class="seccion_gral_productos">
 
 
+                <article class="article_productos">
+                    <h4>Paleta de Sombras Nude</h4>
+                    <img src="./img/paleta.jpg" alt="paleta de sombras nude">
+                    <p class="descrip_prod">12 tonos mate y satinados, ideales para looks de día y de noche.</p>
+                    <p class="precio">$15.000</p>
+                    <a class="verDetalle" href="./product.html">Ver detalle</a>
+                </article>
 
+                <article class="article_productos">
+                    <h4>Labial Líquido Mate</h4>
+                    <img src="./img/labial.jpg" alt="labial líquido mate rojo">
+                    <p class="descrip_prod">Labial de larga duración, acabado aterciopelado en tono rojo clásico.</p>
+                    <p class="precio">$7.200</p>
+                    <a class="verDetalle" href="./product.html">Ver detalle</a>
+                </article>
 
+                <article class="article_productos">
+                    <h4>Buclera para el Cabello</h4>
+                    <img src="./img/buclera.jpg" alt="plancha profesional para el cabello">
+                    <p class="descrip_prod">Crea ondas definidas y duraderas con recubrimiento cerámico.</p>
+                    <p class="precio">$28.500</p>
+                    <a class="verDetalle" href="./product.html">Ver detalle</a>
+                </article>
 
-    <script src="./js/search-results.js"></script>
+                <article class="article_productos">
+                    <h4>Set de Skincare Diario</h4>
+                    <img src="./img/skincare.jpg" alt="set de skincare con crema y limpiador facial">
+                    <p class="descrip_prod">Incluye limpiador facial, tónico hidratante y crema nutritiva.</p>
+                    <p class="precio">$19.800</p>
+                    <a class="verDetalle" href="./product.html">Ver detalle</a>
+                </article>
+
+                <article class="article_productos">
+                    <h4>Vestido Estampado de Verano</h4>
+                    <img src="./img/vestidoestampa.jpg" alt="vestido de verano estampado floral">
+                    <p class="descrip_prod">Vestido fresco y cómodo con diseño floral, ideal para días soleados.</p>
+                    <p class="precio">$32.000</p>
+                    <a class="verDetalle" href="./product.html">Ver detalle</a>
+                </article>
+
+                <article class="article_productos">
+                    <h4>Cartera Tote Minimalista</h4>
+                    <img src="./img/totebag.jpg" alt="cartera tote minimalista color beige">
+                    <p class="descrip_prod">Cartera amplia y elegante, perfecta para combinar con cualquier outfit.</p>
+                    <p class="precio">$27.500</p>
+                    <a class="verDetalle" href="./product.html">Ver detalle</a>
+                </article>
+    </main>
+
+    <footer>
+
+        <section class="seccion_footer">
+            <p class="p_footer">Juliana Markman</p>
+            <p class="p_footer">Ana Clara Nuñez Ibañez</p>
+            <p class="p_footer">Mateo Peña</p>
+        </section>
+
+    </footer>
+
     <script src="./js/vallidar_buscador.js"></script>
+    <script src="./js/search-results.js"></script>
     <script src="./js/categorias.js"></script>
 </body>
+
 </html>
