listo linea 25 product.js, listo punto 5, listo punto 7 y 9, cotejar el 9 a nivel funcionalidad

--- a/register.html
+++ b/register.html
@@ -57,25 +57,25 @@
 
         <section class="seccionlogin">
         
-            <form action="./login.html" method="get">
+            <form class="formularioLogin" action="./login.html" method="get">
 
                 <article class="fondologin">
                     <h2 class="bienvenido">REGISTRATE</h2>
 
                     <div>
-                        <label class="texto" for="email">Email:</label>
+                        <label for="email">Email:</label>
                     </div>
 
                     <div>
-                        <input class="input" id="email" type="email" name="mail" value="" required>
+                        <input class="input"  id="email" class="textoregister" type="email" name="mail" value="">
                     </div>
 
                     <div>
-                        <label class="texto" for="contraseña">Contraseña:</label>
+                        <label  for="contraseña" class="texto" class="textooculto">Contraseña:</label>
                     </div>
 
                     <div>
-                        <input class="input" id="password" type="password" name="pass" value="">
+                        <input class="input" class="textocontraseña" id="password" type="password" name="pass" value="">
                     </div>
 
                     <div>
@@ -83,7 +83,7 @@
                     </div>
 
                     <div>
-                        <input class="input" id="password" type="password" name="pass" value="">
+                        <input class="input" class="textocontraseña" id="password" type="password" name="pass" value="">
                     </div>
 
                     <div>
