Corrección punto 7 y revisión de estructura del punto 9, no pude corregirlo

--- a/register.html
+++ b/register.html
@@ -57,7 +57,7 @@
 
         <section class="seccionlogin">
         
-            <form class="formularioLogin" action="./login.html" method="get">
+            <form class="formularioRegistro" action="./login.html" method="get">
 
                 <article class="fondologin">
                     <h2 class="bienvenido">REGISTRATE</h2>
@@ -83,7 +83,7 @@
                     </div>
 
                     <div>
-                        <input class="input" class="textocontraseña" id="password" type="password" name="pass" value="">
+                        <input class="input" class="textocontraseña2" id="password" type="password" name="pass" value="">
                     </div>
 
                     <div>
